# SQL-Agent

./: .env.example  .gitignore  README.md  database.txt  pyproject.toml
agent/: __init__.py  simple_agent.py
rag/ingestion/: __init__.py  index.py  utils.py
rag/retreival/: index.py  utils.py
rag/retrieval/: __init__.py  index.py  utils.py
tests/: test_full_flow.py  test_pipeline.py
